# security-suite

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  QUICK_START.md  README.md  TROUBLESHOOTING.md  USAGE.md  docker-compose.yml  pyproject.toml  requirement.txt  requirements.txt  secsuite_full.txt  setup.ps1  setup.sh
.github/workflows/: ci.yml
api/: __init__.py  models.py  server.py
api/routers/: apisec.py  health.py  modules.py  results.py  scans.py
cli/: __init__.py  main.py
core/: __init__.py  cache.py  config.py  db.py  exceptions.py  exporters.py  guardrails.py  http_client.py  logger.py  models.py  tools.py  wordlists.py
dashboard/: __init__.py  app.py  main.py  tasks.py
dashboard/static/: main.js
modules/ai/: __init__.py  copilot.py  correlator.py  llm_client.py  remediation.py  remediation_copilot.py  reporter.py
modules/apisec/: __init__.py  auth_tester.py  endpoint_tester.py  fuzzer.py  openapi_parser.py
modules/compliance/: __init__.py  checker.py  standards.py
modules/exploit/: __init__.py  metasploit.py  searchsploit.py
modules/exploit_engine/: __init__.py  cve_module_map.py  runner.py
modules/mitre/: __init__.py  mapper.py
modules/orchestrator/: __init__.py  loop.py
modules/osint/: __init__.py  base.py  dns_enum.py  email_harvester.py  headers.py  port_scanner.py  shodan_scan.py  subdomain.py  tech_detect.py  virustotal.py  whois_lookup.py
modules/password/: __init__.py  auditor.py  generator.py
modules/phishing/: __init__.py  campaign.py  server.py  templates.py  tracker.py
modules/remediation/: __init__.py  ai_engine.py  hardener.py
modules/scheduler/: __init__.py  scheduler.py  storage.py
modules/siem/: __init__.py  base.py  elasticsearch.py  splunk.py  syslog.py  webhook.py
modules/threat_intel/: __init__.py  (+1 more)
scripts/: run_targeted_plan.py  ubuntu_audit.sh  ubuntu_remediate.sh
tests/: __init__.py  test_cache.py  test_core.py  test_error_handling.py  test_exporters.py  test_osint.py  test_wordlists.py
(+18 files in other folders)
