[project]
name = "security-suite"
version = "0.1.0"
description = "Open-source security tools suite for OSINT, web testing, phishing simulation, and compliance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Security Suite Contributors"}
]
keywords = ["security", "osint", "pentesting", "phishing", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "aiofiles>=23.2.0",
    "dnspython>=2.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "python-whois>=0.9.0",
    "shodan>=1.31.0",
    "aiohttp>=3.9.0",
    "msgpack>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
ai = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
]
dashboard = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
all = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
secsuite = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules", "cli", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
